--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello!
+---
+title: Notes
+layout: post
+---
+
+Notes
+=====
+
+This is stuff I like:
+* Foo
+* Bar
+* Baz
+
+This is a [link](http://www.kreyer.no)
+
+{% highlight java linenos %}
+public static void main(String args[]) {
+  System.out.println("Hello, world!");
+}
+{% endhighlight %}
